/* Button titles */
"get_a_joke_button" = "Get a joke";
"tell_me_a_joke_button" = "Tell me a joke";
"tell_me_the_joke_action" = "Tell me the joke";

/* Default messages */
"try_it_later" = "Try it later";
"time_for_chuck_norris_joke" = "Time for a Chuck Norris Joke!";
"something_went_wrong_try_again_later" = "Something went wrong, please try again";

/* Side menu items */
"menu_create_alarm" = "Create an alarm";
"menu_manage_alarms" = "Manage alarms";
"menu_about" = "About";

/* About screen */
"about_description" = "This app provides unlimited Chuck Norris jokes for your entertainment. Scheduled them to never miss a laugh!";
"about_version_format" = "Version %@";
"about_close_button" = "Close";

/* Alarm Edit screen */
"alarm_edit_time_section" = "Time";
"alarm_edit_select_time" = "Select Time";
"alarm_edit_repeat_section" = "Repeat";
"alarm_edit_add_title" = "Add Alarm";
"alarm_edit_edit_title" = "Edit Alarm";
"alarm_edit_cancel_button" = "Cancel";
"alarm_edit_save_button" = "Save";

/* Alarm List screen */
"alarm_list_title" = "Alarms";
"alarm_list_close_button" = "Close";
"alarm_list_delete_title" = "Delete Alarm";
"alarm_list_delete_message" = "Are you sure you want to delete this alarm?";
"alarm_list_confirm_button" = "Confirm";
"alarm_list_cancel_button" = "Cancel";
"alarm_list_one_time" = "One time";
"alarm_list_every_day" = "Every day";
